@@ -1,6 +1,5 @@
-package ru.javawebinar.topjava.web.user;
+package ru.javawebinar.topjava;
 
-import ru.javawebinar.topjava.MatcherFactory;
 import ru.javawebinar.topjava.model.Role;
 import ru.javawebinar.topjava.model.User;
 import ru.javawebinar.topjava.web.json.JsonUtil;
@@ -10,16 +9,15 @@ import java.util.Date;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static ru.javawebinar.topjava.web.meal.MealTestData.*;
+import static ru.javawebinar.topjava.MealTestData.*;
 import static ru.javawebinar.topjava.model.AbstractBaseEntity.START_SEQ;
 
 public class UserTestData {
-    public static final MatcherFactory.Matcher<User> MATCHER = MatcherFactory.usingIgnoringFieldsComparator(User.class, "registered", "meals", "password");
-    public static MatcherFactory.Matcher<User> WITH_MEALS_MATCHER =
+    public static final MatcherFactory.Matcher<User> USER_MATCHER = MatcherFactory.usingIgnoringFieldsComparator(User.class, "registered", "meals", "password");
+    public static MatcherFactory.Matcher<User> USER_WITH_MEALS_MATCHER =
             MatcherFactory.usingAssertions(User.class,
 //     No need use ignoringAllOverriddenEquals, see https://assertj.github.io/doc/#breaking-changes
-                    (a, e) -> assertThat(a).usingRecursiveComparison()
-                            .ignoringFields("registered", "meals.user", "password").isEqualTo(e),
+                    (a, e) -> assertThat(a).usingRecursiveComparison().ignoringFields("registered", "meals.user", "password").isEqualTo(e),
                     (a, e) -> {
                         throw new UnsupportedOperationException();
                     });
@@ -41,7 +39,17 @@ public class UserTestData {
     }
 
     public static User getUpdated() {
-        return new User(USER_ID, "UpdatedName", "user@yandex.ru", "newPass", 330, false, new Date(), List.of(Role.ADMIN));
+        User updated = new User(user);
+
+// In case of update with user.id=null in body needs workaround
+// ValidationUtil.assureIdConsistent called after validation
+//      updated.setEmail("update@gmail.com");
+        updated.setName("UpdatedName");
+        updated.setCaloriesPerDay(330);
+        updated.setPassword("newPass");
+        updated.setEnabled(false);
+        updated.setRoles(Collections.singletonList(Role.ADMIN));
+        return updated;
     }
 
     public static String jsonWithPassword(User user, String passw) {
